# asciifyme.rust

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.sh  index.html
.github/workflows/: build.yml
src/: asciifyier.rs  canvas.rs  lib.rs  web_cam.rs
